tests/fail/elaboration/unification/mismatch/fun-app-unbound-head-2.snap
stdout = ''
stderr = '''
error: cannot find `f` in scope
  ┌─ tests/fail/elaboration/unification/mismatch/fun-app-unbound-head-2.fathom:3:1
  │
3 │ f x y
  │ ^ unbound name

error: cannot find `x` in scope
  ┌─ tests/fail/elaboration/unification/mismatch/fun-app-unbound-head-2.fathom:3:3
  │
3 │ f x y
  │   ^ unbound name

error: non-variable function application in problem spine
  ┌─ tests/fail/elaboration/unification/mismatch/fun-app-unbound-head-2.fathom:3:1
  │
3 │ f x y
  │ ^^^

error: cannot find `y` in scope
  ┌─ tests/fail/elaboration/unification/mismatch/fun-app-unbound-head-2.fathom:3:5
  │
3 │ f x y
  │     ^ unbound name

error: failed to infer function input type
  ┌─ tests/fail/elaboration/unification/mismatch/fun-app-unbound-head-2.fathom:3:1
  │
3 │ f x y
  │ ^ unsolved function input type

error: failed to infer function output type
  ┌─ tests/fail/elaboration/unification/mismatch/fun-app-unbound-head-2.fathom:3:1
  │
3 │ f x y
  │ ^ unsolved function output type

error: failed to infer function input type
  ┌─ tests/fail/elaboration/unification/mismatch/fun-app-unbound-head-2.fathom:3:1
  │
3 │ f x y
  │ ^^^ unsolved function input type

error: failed to infer function output type
  ┌─ tests/fail/elaboration/unification/mismatch/fun-app-unbound-head-2.fathom:3:1
  │
3 │ f x y
  │ ^^^ unsolved function output type

'''
